# Rscan

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  config.toml  config_optimized.toml  test_config.toml
.cursor/rules/: rust.mdc
assets/: report.css
benches/: performance_bench.rs
src/: brute_force.rs  cli.rs  config.rs  discovery.rs  display.rs  error.rs  evasion.rs  exploit.rs  lib.rs  main.rs  nuclei_dsl.rs  platform.rs  poc.rs  reporting.rs  template.rs  template_engine.rs  utils.rs  vuln_scan.rs  web_scan.rs
tests/: integration_tests.rs
wordlists/: passwords.txt  usernames.txt
