[package]
name = "rscan"
version = "0.1.0"
edition = "2021"
authors = ["Rscan Team"]
description = "Comprehensive internal network scanning tool for vulnerability assessment"
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-org/rscan"
keywords = ["security", "network", "scanner", "vulnerability", "penetration-testing"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
rayon = "1.8"

# Networking and proxy support
socket2 = "0.5"
trust-dns-resolver = "0.23"
pnet = "0.34"
surge-ping = "0.8"
ping = "0.5"
if-addrs = "0.10"
reqwest = { version = "0.11", features = ["json", "stream", "socks", "blocking"] }
hyper = { version = "0.14", features = ["full"] }
hyper-proxy = "0.9"
hyper-tls = "0.5"

# Randomization and timing
fastrand = "2.0"
parking_lot = "0.12"

# HTTP/Web scanning
scraper = "0.18"
url = "2.4"
urlencoding = "2.1"

# SSH and protocol implementations
ssh2 = "0.9"
# async-ssh2-tokio = "0.8"  # Will use ssh2 directly
# russh = "0.40"  # Alternative SSH implementation
# russh-keys = "0.40"

# Database connections
mysql_async = "0.34"
tokio-postgres = "0.7"
redis = { version = "0.24", features = ["tokio-comp"] }
tiberius = "0.12"

# Additional protocol implementations
tokio-native-tls = "0.3"
native-tls = "0.2"

# Crypto and hashing
md5 = "0.7"
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"

# Compression
flate2 = "1.0"
miniz_oxide = "0.7"

# Additional utilities for DSL
html-escape = "0.2"
once_cell = "1.19"
dashmap = "5.5"
byteorder = "1.5"
walkdir = "2.4"
crc32fast = "1.3"
murmur3 = "0.5"

# Additional utilities
lazy_static = "1.4"
colored = "2.0"
hostname = "0.3"

# SMB/CIFS (using alternative crate)
# ntlm = "0.3"  # Not available, will implement basic SMB detection

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
toml = "0.8"

# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.13"
env_logger = "0.10"
log = "0.4"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
indicatif = "0.17"
crossterm = "0.27"
# Security and cryptography
ring = "0.17"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "winsock2", "ws2def", "ws2ipdef", "sysinfoapi", "securitybaseapi", "iphlpapi"] }

[build-dependencies]
winres = "0.1.12"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
